# Android-Boilerplate-Template

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/just/somebody/templates/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  defines.h
app/src/main/cpp/ForgeLibrary/: NativeBridge.cpp
app/src/main/cpp/ForgeLibrary/implement/: filesystem.c
app/src/main/java/just/somebody/templates/: App.kt  MainActivity.kt
app/src/main/java/just/somebody/templates/appModule/: AppModule.kt  HardwareManager.kt  Logger.kt  PermissionManager.kt
app/src/main/java/just/somebody/templates/appModule/nativeBridge/: NativeBridge.kt
app/src/main/java/just/somebody/templates/appModule/network/: NetworkRequest.kt  (+2 more)
app/src/main/java/just/somebody/templates/data/: Api.kt  RepositoryImpl.kt
app/src/main/java/just/somebody/templates/depInj/: AppModule.kt  AppSettingsSerializer.kt  HardwareManager.kt  PermissionManager.kt  SettingsManager.kt
app/src/main/java/just/somebody/templates/domain/: Repository.kt
app/src/main/java/just/somebody/templates/presentation/: MainViewModel.kt  ObserveAsEvent.kt  SnackbarController.kt  SplashViewModel.kt  ViewModelFactoryHelper.kt
app/src/main/res/animator/: logo_animator.xml
app/src/main/res/drawable/: animated_logo.xml  logo.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/just/somebody/templates/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
